# OmniKernal

./: .gitignore  DESIGN.md  README.md  bug_analysis.md  claude.md  des.md  des_phase2.md  des_phase3.md  last.md  old_last.md  pyproject.toml  requirements.txt  researchpaper.md  smoke_test.py  test_baileys.py  test_playwright.py  test_waha.py
adapter_packs/console_mock/: adapter.py  adapter.yaml
adapter_packs/whatsapp_baileys/: adapter.py  adapter.yaml  baileys_bridge.js  package-lock.json  package.json
adapter_packs/whatsapp_playwright/: adapter.py  adapter.yaml  requirements.txt
adapter_packs/whatsapp_waha/: adapter.py  adapter.yaml
benchmarks/: bench_concurrency.py  bench_db_lookup.py  bench_fault_isolation.py  bench_latency.py  bench_memory.py  bench_plugin_load.py  comparative_runner.py  harness.py  run_all.py
benchmarks/results/: comparative_matrix.json  concurrency.json  db_lookup.json  fault_isolation.json  latency.json  memory.json  plugin_load.json
docs/research/: OmniKernal_Research_Paper.docx  OmniKernal_Research_Paper.md  OmniKernal_Research_Paper_Final.docx  paper2.0.docx  report.md
plugins/: __init__.py
plugins/echo/: __init__.py  commands.yaml  manifest.json
plugins/echo/handlers/: __init__.py  echo.py
plugins/sys/: commands.yaml  manifest.json  permissions.json
plugins/sys/handlers/: sys_plugins.py
profiles/main/: metadata.json
src/adapters/: loader.py  validator.py
src/core/: __init__.py  dispatcher.py  engine.py  loader.py  logger.py  parser.py  permissions.py  router.py
src/core/contracts/: __init__.py  command_context.py  command_result.py  message.py  plugin_manifest.py  routing_rule.py  user.py
src/core/interfaces/: __init__.py  base_command.py  base_plugin.py  platform_adapter.py
src/database/: models.py  repository.py  session.py
src/modes/: coop_mode.py  mode_manager.py  self_mode.py
src/profiles/: lock.py  manager.py  metadata.py
src/security/: encryption.py  sanitizer.py  watchdog.py
tests/adapters/: test_adapters.py
tests/modes/: test_modes.py
tests/profiles/: test_profiles.py
tests/security/: test_encryption.py  test_sanitizer.py  test_watchdog.py
tests/test_contracts/: __init__.py  test_command_result.py  test_message.py  test_user.py
tests/test_core/: test_engine.py  test_parser.py
tests/test_database/: test_repository.py
tests/test_interfaces/: __init__.py  test_base_command.py  test_base_plugin.py  test_platform_adapter.py
tests/test_security/: test_sanitizer.py
