[project]
name = "omnikernal"
version = "0.1.0"
description = "A secure, database-driven, multi-platform bot automation engine using a Microkernel (Plugin) Architecture"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "BITS-Rohit", email = "rohitguptaradheradhe2004@gmail.com" }
]
keywords = [
    "automation",
    "microkernel",
    "plugin",
    "bot",
    "multi-platform",
    "whatsapp",
    "playwright",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Intended Audience :: Developers",
]

dependencies = [
    # Core async runtime
    "asyncio-mqtt>=0.16.2",                # Optional async messaging support
    # Database Layer (SQLAlchemy core)
    "sqlalchemy>=2.0.47",
    # Configuration and serialization
    "pyyaml>=6.0.3",
    "tomlkit>=0.14.0",
    "orjson>=3.11.7",
    # Logging
    "loguru>=0.7.3",
    # Platform adapter: Playwright (WhatsApp Web automation)
    "playwright>=1.58.0",
    # CLI for dev tooling
    "rich>=14.3.3",
    "rich-argparse>=1.7.2",
    # Process & system utils
    "psutil>=7.0.0",
    # Cryptography (profile metadata encryption)
    "cryptography>=46.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]
database-extras = [
    "aiosqlite>=0.20.0",   # async SQLite support
    "aiomysql>=0.2.0",     # async MySQL support (optional)
    "asyncpg>=0.29.0",     # async PostgreSQL support (optional)
]

[project.urls]
"Homepage"    = "https://github.com/BITS-Rohit/OmniKernal"
"Bug Tracker" = "https://github.com/BITS-Rohit/OmniKernal/issues"
"Source"      = "https://github.com/BITS-Rohit/OmniKernal"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# uv tooling
# ---------------------------------------------------------------------------
[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.0",
    "mypy>=1.10.0",
    "aiosqlite>=0.22.1",
]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select  = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore  = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style              = "double"
indent-style             = "space"
skip-magic-trailing-comma = false

# ---------------------------------------------------------------------------
# Mypy (type checking)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version         = "3.12"
strict                 = true
ignore_missing_imports = true
warn_return_any        = true
warn_unused_configs    = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-v --cov=src --cov-report=term-missing"
