[project]
name = "omnikernal"
version = "0.1.0"
description = "A secure, database-driven, multi-platform bot automation engine using a Microkernel (Plugin) Architecture"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "BITS-Rohit", email = "rohitguptaradheradhe2004@gmail.com" }
]
keywords = [
    "automation",
    "microkernel",
    "plugin",
    "bot",
    "multi-platform",
    "whatsapp",
    "playwright",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Intended Audience :: Developers",
]

dependencies = [
    # Database Layer
    "sqlalchemy>=2.0.47",
    "aiosqlite>=0.20.0",                   # Async SQLite driver
    # Configuration and serialization
    "pyyaml>=6.0.3",
    # Logging
    "loguru>=0.7.3",
    # Platform adapter (scaffold support)
    "playwright>=1.58.0",
    # WhatsApp Web automation library (used by whatsapp_playwright adapter)
    "whatsplay>=1.9.8",
    # Process & system utils
    "psutil>=7.0.0",
    # Cryptography
    "cryptography>=46.0.5",
]

[project.optional-dependencies]
# Core test suite — pytest runner, async support, coverage
testing = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]
# Code quality — linter, formatter, type checker, pre-commit hooks
linting = [
    "ruff>=0.14.0",
    "mypy>=1.10.0",
    "deptry>=0.23.0",
    "pre-commit>=3.7.0",
]
# Adapter integration testing — manual WhatsApp / Playwright smoke tests
adapter-testing = [
    "whatsplay>=1.9.8",   # WhatsApp Web automation (whatsapp_playwright adapter)
]
# Convenience group — pulls in all of the above
dev = [
    "omnikernal[testing]",
    "omnikernal[linting]",
    "omnikernal[adapter-testing]",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]
database-extras = [
    "aiosqlite>=0.20.0",   # async SQLite support
    "aiomysql>=0.2.0",     # async MySQL support (optional)
    "asyncpg>=0.29.0",     # async PostgreSQL support (optional)
]

[project.urls]
"Homepage"    = "https://github.com/BITS-Rohit/OmniKernal"
"Bug Tracker" = "https://github.com/BITS-Rohit/OmniKernal/issues"
"Source"      = "https://github.com/BITS-Rohit/OmniKernal"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# uv dependency-groups (uv sync / uv run — replaces [project.optional-dependencies] for uv users)
# ---------------------------------------------------------------------------
[dependency-groups]
# Core test suite
testing = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "types-pyyaml",     # mypy stubs for pyyaml
    "types-psutil",     # mypy stubs for psutil
]
# Code quality tools
linting = [
    "ruff>=0.14.0",
    "mypy>=1.10.0",
    "deptry>=0.23.0",
    "pre-commit>=3.7.0",
]
# Adapter integration / smoke tests
adapter-testing = [
    "whatsplay>=1.9.8",   # WhatsApp Web automation (whatsapp_playwright adapter)
]
# Top-level dev group — includes all sub-groups
dev = [
    { include-group = "testing" },
    { include-group = "linting" },
    { include-group = "adapter-testing" },
]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select  = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore  = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style              = "double"
indent-style             = "space"
skip-magic-trailing-comma = false

# ---------------------------------------------------------------------------
# Mypy (type checking)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version         = "3.12"
strict                 = true
ignore_missing_imports = true
warn_return_any        = true
warn_unused_configs    = true

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
strict_optional = false
warn_return_any = false
warn_no_return = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-v --cov=src --cov-report=term-missing"

[tool.deptry]
package_module_name_map = { "pyyaml" = "yaml" }
per_rule_ignores = { "DEP002" = ["aiosqlite", "playwright", "whatsplay", "aiomysql", "asyncpg"] }
# Also ignore dev and docs in PEP 621
pep621_dev_dependency_groups = ["testing", "linting", "adapter-testing", "dev", "docs"]
